@@ -11,6 +11,7 @@ Changes since 5.0 release
 * CHANGE order of margins in the "set margin" command to left, right, bottom, top
 * CHANGE guarantee color of key sample for "lc variable" plots matches 1st point
 * CHANGE "set term fig color" can use predefined linetype colors and named colors
+* FIX replace palette color value NaN with background color
 * FIX improved handling of boxplot data with multiple factors (categories)
 * FIX save_textcolor was not handling "tc variable"
 * FIX apply numeric locale when reading ascii matrix data
